codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__renders_restricted_folder.snap
---
source: tui/src/onboarding/trust_directory.rs
assertion_line: 395
expression: terminal.backend()
---
┌────────────────────────────────────────────────────────────────────┐
│                                                                    │
│  Folder access                                                     │
│  /workspace/project                                                │
│                                                                    │
│  Config, hooks, and exec policies from untrusted folders stay      │
│  disabled. Trusted project folders can still contribute settings.  │
│  Skills still load, and tools follow your permission settings.     │
│  Opening will not change saved trust.                              │
│                                                                    │
│› 1. Open restricted                                                │
│  2. Back to Agent Command Center                                   │
│                                                                    │
│  enter continue · esc back                                         │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
